--- a/FlexFlow.Api/appsettings.json
+++ b/FlexFlow.Api/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
-    "SQLiteDatabase": "flexflow.db",
-    "AdministratorEmail": "admin@admin.com"
+  "SQLiteDatabase": "flexflow.db",
+  "AdministratorEmail": "admin@admin.com",
+  "BearerSecret": "{957B1D19-BD93-4F2C-9936-F4DE62A7731E}",
+  "BearerLifetimeMinutes": 30,
+  "BearerAudience": "FlexFlow",
+  "BearerIssuer": "FlexFlow"
 }
