--- a/FlexFlow.Api/appsettings.json
+++ b/FlexFlow.Api/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "SQLiteDatabase": "flexflow.db",
   "AdministratorEmail": "admin@admin.com",
-  "BearerSecret": "{957B1D19-BD93-4F2C-9936-F4DE62A7731E}",
+  "BearerSecret": "DEFAULT_SECRET",
   "BearerLifetimeMinutes": 30,
   "BearerAudience": "FlexFlow",
   "BearerIssuer": "FlexFlow"
